# dll-pack-builder

./: pyproject.toml
src/dll_pack_builder/: deps.py  main.py
