[project]
name = "dll-pack-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "globre>=0.1.5",
    "pylddwrap>=1.2.2",
    "typer>=0.12.5",
]

[project.scripts]
dll-pack-builder = "dll_pack_builder.main:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
