[project]
name = "dll-pack-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "globre>=0.1.5",
    "pylddwrap>=1.2.2",
    "lief>=0.12.3",
    "pefile>=2024.8.26",
    "cyclopts>=2.9.9",
]

[project.scripts]
dll-pack-builder = "dll_pack_builder.main:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
